changes to api, fixed typo in routes
